--- a/src/styles/components/_mainContainer.scss
+++ b/src/styles/components/_mainContainer.scss
@@ -9,7 +9,7 @@
     min-height: 100vh;
     background-color: $white;
 
-    padding: 0 3.5rem;
+    //padding: 0 3.5rem; //this is not visible in every page
 }
 
 
