--- a/src/styles/CompiledCss/index.css
+++ b/src/styles/CompiledCss/index.css
@@ -27,6 +27,40 @@ html body {
   background-color: #f2fcfb;
 }
 
+.dividerContainer {
+  width: 100%;
+  padding: 17px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.dividerContainer .line {
+  width: 100%;
+  height: 1px;
+  background-color: #d3dbdb;
+}
+
+.navbar {
+  width: 100%;
+  height: max-content;
+  background-color: red;
+  position: sticky;
+  top: 0;
+}
+.navbar img {
+  width: 76.5px;
+  height: auto;
+  max-width: 350px;
+  max-height: 75px;
+  border-radius: 50%;
+  border: 1px solid black;
+  transition: all 180ms linear;
+}
+.navbar img.small {
+  width: 51px;
+  height: auto;
+}
+
 .banner {
   width: 100%;
   padding: 3.5em;
@@ -47,12 +81,6 @@ html body {
   -webkit-font-smoothing: antialiased;
   text-transform: initial;
   margin: 17px 0;
-}
-.banner .line {
-  width: 100%;
-  height: 1px;
-  display: block;
-  margin: 0 17px;
 }
 
 .sectionDivider {
