--- a/src/styles/pages/_frountPage.scss
+++ b/src/styles/pages/_frountPage.scss
@@ -1,13 +1,13 @@
 
 
 
-
+@use "../variables/padding" as *;
 
 
 
 .banner{
     width: 100%;
-    padding: 3.5em;
+    padding: $sectionPadding;
 
         img{
             width: 100%;
@@ -26,14 +26,7 @@
             text-transform: initial;
             margin: 17px 0;
         }
-        .line{
-            width: 100%;
-            height: 1px;
-            display: block;
-            margin: 0 17px;
-        }
 }
-
 
 
 
