--- a/src/styles/variables/_transitions.scss
+++ b/src/styles/variables/_transitions.scss
@@ -1,8 +1,8 @@
 
 
 $logoTransition: all 180ms linear;
-
-
+$dropdownNavTransition: max-height 5s linear;
+$dropdownNavTransition2: max-height 3s linear;
 
 
 
