--- a/src/styles/variables/_colors.scss
+++ b/src/styles/variables/_colors.scss
@@ -6,7 +6,10 @@
 $white: #f2fcfb;
 $black: #000;
 $lightGrey: #d3dbdb;
-$grey:#888888
+$grey:#888888;
+$pink: #e97676;
+$blue: #055a8b;
+$red: #da4444;
 
 
 
