--- a/src/styles/pages/_frountPage.scss
+++ b/src/styles/pages/_frountPage.scss
@@ -2,13 +2,16 @@
 
 
 @use "../variables/padding" as *;
+@use "../variables/colors" as *;
+@use "../variables/fontSize" as *;
+@use "../variables/gap" as *;
 
 
 
-.banner{
-    width: 100%;
-    padding: $sectionPadding;
-
+.sectionContainerPadded{
+    &:nth-child(2){
+        padding-top: $sectionPadding;
+    }
         img{
             width: 100%;
             height: auto;
@@ -17,7 +20,6 @@
             font-family: 'Luckiest Guy';
             text-align: center;
             color: #000000;
-            font-weight: 400;
             font-style: normal;
             font-size: 32px;
             margin-bottom: 10px;
@@ -29,6 +31,54 @@
 }
 
 
+.pinkBox{
+    width: 100%;
+    height: 439.375px;
+    background-color: $pink;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 $pinkBoxPadding;
+
+        .paragraph{
+            width: 100%;
+            padding: $pinkBoxPadding 0;
+            text-align: center;
+            display: flex;
+            flex-direction: column;
+            gap: $gap1Medium;
+            font-size: $medium1;
+            color: $white;
+        }
+        .LocationAndInfo{
+            display: flex;
+            flex-direction: column;
+            text-align: center;
+            justify-items: center;
+            font-size: $medium1;
+            gap: $gap1Small;
+
+                a{
+                    color: $blue;
+                    font-weight: bold;
+                    text-decoration-color: $red;
+                }
+        }
+        .Scocials{
+            display: flex;
+            gap: $gap2Small;
+            img{
+                max-width: 21px;
+                margin-bottom: 68px;
+                cursor: pointer;
+    
+                    &:hover{
+                        filter: brightness(50);
+                    }
+            }
+        }
+}
 
 
 
