--- a/src/styles/CompiledCss/index.css
+++ b/src/styles/CompiledCss/index.css
@@ -113,6 +113,24 @@ html body {
   padding: 0 3.5em;
 }
 
+.buttonMediumBlack {
+  width: max-content;
+  height: max-content;
+  padding: 20px 40px;
+  border: 0;
+  background-color: #383838;
+  color: #f2fcfb;
+  cursor: pointer;
+  border-radius: 3px;
+  font-size: 12.88px;
+  -webkit-font-smoothing: antialiased;
+  letter-spacing: 1px;
+  font-weight: 400;
+}
+.buttonMediumBlack:hover {
+  filter: brightness(1.3);
+}
+
 .sectionContainerPadded:nth-child(2) {
   padding-top: 3.5em;
 }
@@ -121,7 +139,7 @@ html body {
   height: auto;
 }
 .sectionContainerPadded h1 {
-  font-family: "Luckiest Guy";
+  font-family: "__Luckiest_Guy_6d9c92";
   text-align: center;
   color: #000000;
   font-style: normal;
@@ -177,6 +195,49 @@ html body {
 }
 .pinkBox .Scocials img:hover {
   filter: brightness(50);
+}
+
+.dontateContainer {
+  width: 100%;
+  height: max-content;
+  display: flex;
+  flex-direction: row;
+}
+.dontateContainer section {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0 20px;
+}
+.dontateContainer section:nth-child(1) {
+  background-color: orange;
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+}
+.dontateContainer section:nth-child(1) a {
+  color: #24678d;
+  font-size: 24px;
+  text-decoration-color: rgba(36, 103, 141, 0.1);
+}
+.dontateContainer section:nth-child(1) p {
+  text-align: center;
+  color: #3a5361;
+  font-weight: 700;
+  font-size: 16.8px;
+}
+.dontateContainer section:nth-child(1) ul {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  list-style-type: none;
+  font-weight: 700;
+  font-size: 16.8px;
+  color: #888888;
+}
+.dontateContainer section:nth-child(2) {
+  background-color: olive;
 }
 
 .sectionDivider {
