--- a/src/styles/variables/_colors.scss
+++ b/src/styles/variables/_colors.scss
@@ -5,10 +5,13 @@
 
 $white: #f2fcfb;
 $black: #000;
+$lightBlack: #383838;
 $lightGrey: #d3dbdb;
 $grey:#888888;
 $pink: #e97676;
 $blue: #055a8b;
+$blue2:#24678d;
+$darkBlue1: #3a5361;
 $red: #da4444;
 
 
