--- a/src/styles/variables/_padding.scss
+++ b/src/styles/variables/_padding.scss
@@ -2,6 +2,7 @@
 
 //main
 $sectionPadding: 3.5em;
+$sectionPaddingSmall1: 20px;
 
 //small
 $linePadding: 17px;
@@ -9,5 +10,7 @@ $pinkBoxPadding: 10px;
 $navbarYPadding: 26px;
 
 
-
+//buttonPaddings
+$buttonPaddingmedium1: 40px;
+$buttonPaddingmedium2: 20px;
 
