--- a/src/styles/components/_index.scss
+++ b/src/styles/components/_index.scss
@@ -8,7 +8,7 @@
 @forward "./Navbar";
 @forward "./SectionContainer";
 @forward "./buttonMediumBlack";
-
-
+@forward "./Bumper";
+@forward "./LinkList";
 
 
