--- a/src/styles/variables/_colors.scss
+++ b/src/styles/variables/_colors.scss
@@ -6,15 +6,17 @@
 $white: #f2fcfb;
 $black: #000;
 $lightBlack: #383838;
+$grey: #525252;
 $lightGrey: #d3dbdb;
 $grey:#888888;
 $pink: #e97676;
 $blue: #055a8b;
 $blue2:#24678d;
+$blue3: #1db2b6;
 $darkBlue1: #3a5361;
 $red: #da4444;
 
-
+$yellow:#ffc439;
 
 
 
