--- a/src/styles/variables/_fontSize.scss
+++ b/src/styles/variables/_fontSize.scss
@@ -1,12 +1,33 @@
 
 
-//medium em sizes
-$medium1: 1.2em;
+//small - px
+$smallPX-12: 12.88px;
+$smallPX-16: 16px;
+$smallPX-16-2: 16.8px;
+$smallPX-18: 18px;
+
+
+
+//small - em
+
+
+
+
+//medium - px
+$mediumPX-32: 32px;
+$mediumPX-24: 24px;
+
+//medium - em
+$mediumEM-1: 1.2em;
 
 
 
 
 
+//large - px
+
+
+//large - em
 
 
 
