--- a/src/styles/variables/_padding.scss
+++ b/src/styles/variables/_padding.scss
@@ -9,6 +9,9 @@ $linePadding: 17px;
 $pinkBoxPadding: 10px;
 $navbarYPadding: 26px;
 
+//medium
+$mediumPadding1: 50px;
+
 
 //buttonPaddings
 $buttonPaddingmedium1: 40px;
