--- a/src/styles/pages/_about.scss
+++ b/src/styles/pages/_about.scss
@@ -40,6 +40,10 @@
     .infoSectionText{
         color: $lightBlack;
     }
+    .img{
+        float: right;
+        width: 100px;
+    }
 }
 
 .aboutSectionText{
