--- a/src/styles/CompiledCss/index.css
+++ b/src/styles/CompiledCss/index.css
@@ -349,6 +349,10 @@ html body {
 .infoSection .infoSectionText {
   color: #383838;
 }
+.infoSection .img {
+  float: right;
+  width: 100px;
+}
 
 .aboutSectionText {
   padding-top: 30px;
