--- a/src/styles/components/_Navbar.scss
+++ b/src/styles/components/_Navbar.scss
@@ -7,6 +7,7 @@
 .navbar{
     width: 100%;
     min-height: 75px;
+    height: 100px;
     background-color: $white;
     position: sticky;
     top: 0;
@@ -29,6 +30,7 @@
             height: auto;
             max-width: 350px;
             max-height: 75px;
+            position: relative;
 
 
             border-radius: 50%;
