--- a/src/styles/components/_mainContainer.scss
+++ b/src/styles/components/_mainContainer.scss
@@ -10,6 +10,12 @@
     background-color: $white;
 
     //padding: 0 3.5rem; //this is not visible in every page
+        @media (max-width:452px) {
+            &{
+                width: 100vw !important;
+                max-width: none;
+            }
+        }
 }
 
 
